@@ -8,7 +8,10 @@ import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Data
 @AllArgsConstructor
@@ -42,26 +45,42 @@ public class HotelResponse {
     @JsonProperty("conveniences")
     private List<ConvenienceResponse> conveniences;
 
+    @JsonProperty("roomTypes")
+    private List<RoomTypeResponse> roomTypes;
+
+    @JsonProperty("feedbacks")
+    private List<FeedbackResponse> feedbacks;
+
     @JsonProperty("image_urls")
     private List<HotelImageResponse> imageUrls;
 
-//    @JsonProperty("rooms")
-//    private List<RoomResponse> rooms;
-
     public static HotelResponse fromHotel(Hotel hotel) {
-        HotelLocationResponse locationResponse = HotelLocationResponse.fromHotelLocation(hotel.getLocation());
-        UserResponse partnerResponse = UserResponse.fromUser(hotel.getPartner());
+        HotelLocationResponse locationResponse = (hotel.getLocation() != null) ? HotelLocationResponse.fromHotelLocation(hotel.getLocation()) : null;
+        UserResponse partnerResponse = (hotel.getPartner() != null) ? UserResponse.fromUser(hotel.getPartner()) : null;
 
-        List<ConvenienceResponse> convenienceResponses = hotel.getConveniences().stream()
+        List<ConvenienceResponse> convenienceResponses = Optional.ofNullable(hotel.getConveniences())
+                .orElseGet(Collections::emptySet)
+                .stream()
                 .map(ConvenienceResponse::fromConvenience)
-                .toList();
+                .collect(Collectors.toList());
 
-//        List<RoomResponse> roomResponses = (hotel.getRooms() != null) ? hotel.getRooms().stream()
-//                .map(RoomResponse::fromRoom)
-//                .toList() : List.of();
-        List<HotelImageResponse> hotelImageResponses = hotel.getHotelImages().stream()
+        List<RoomTypeResponse> roomTypeResponses = Optional.ofNullable(hotel.getRoomTypes())
+                .orElseGet(Collections::emptyList)
+                .stream()
+                .map(RoomTypeResponse::fromType)
+                .collect(Collectors.toList());
+
+        List<FeedbackResponse> feedbackResponses = Optional.ofNullable(hotel.getFeedbacks())
+                .orElseGet(Collections::emptySet)
+                .stream()
+                .map(FeedbackResponse::fromFeedback)
+                .collect(Collectors.toList());
+
+        List<HotelImageResponse> hotelImageResponses = Optional.ofNullable(hotel.getHotelImages())
+                .orElseGet(Collections::emptySet)
+                .stream()
                 .map(HotelImageResponse::fromHotelImage)
-                .toList();
+                .collect(Collectors.toList());
 
         return HotelResponse.builder()
                 .id(hotel.getId())
@@ -73,6 +92,8 @@ public class HotelResponse {
                 .status(hotel.getStatus())
                 .location(locationResponse)
                 .conveniences(convenienceResponses)
+                .roomTypes(roomTypeResponses)
+                .feedbacks(feedbackResponses)
                 .imageUrls(hotelImageResponses)
                 .build();
     }
